Add audio snippet
